<resources>
    <string name="app_name">CodeWars</string>

    <string name="name">Name: </string>
    <string name="desc">Desc: </string>
    <string name="category">Category: </string>
    <string name="languages">Languages: </string>
    <string name="created_by">Created By: </string>
    <string name="created_at">Created At: </string>
    <string name="approved_by">Approved By: </string>
    <string name="approved_at">Approved At:</string>
    <string name="no_user_found">No User Found. Try different user.</string>
    <string name="no_internet">Please check your Internet connection and retry</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="retry">Retry</string>
    <string name="challenge_details">Challenge Details</string>
    <string name="no_data">No Data Found.</string>
    <string name="completed_challenge">Completed Challenge</string>
    <string name="authored_challenge">Authored Challenge</string>
</resources>