<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:padding="@dimen/_10sdp"
    tools:context=".ui.challengedetails.ChallengeDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/txv_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/txv_name_text"
            tools:text="Completed" />

        <TextView
            android:id="@+id/txv_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/desc"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_name_text" />

        <TextView
            android:id="@+id/txv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/txv_desc_text"
            tools:text="Completed" />

        <TextView
            android:id="@+id/txv_category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/category"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_desc" />

        <TextView
            android:id="@+id/txv_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/txv_category_text"
            tools:text="Completed" />

        <TextView
            android:id="@+id/txv_languages_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/languages"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_category" />

        <TextView
            android:id="@+id/txv_languages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/txv_languages_text"
            tools:text="Completed" />

        <TextView
            android:id="@+id/txv_created_by_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/created_by"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_languages" />

        <TextView
            android:id="@+id/txv_created_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/txv_created_by_text"
            tools:text="Completed" />

        <TextView
            android:id="@+id/txv_created_at_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/created_at"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_created_by" />

        <TextView
            android:id="@+id/txv_created_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/txv_created_at_text"
            tools:text="Completed" />

        <TextView
            android:id="@+id/txv_approved_by_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/approved_by"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_created_at" />

        <TextView
            android:id="@+id/txv_approved_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/txv_approved_by_text"
            tools:text="Completed" />

        <TextView
            android:id="@+id/txv_approved_at_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/approved_at"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txv_approved_by_text" />

        <TextView
            android:id="@+id/txv_approved_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/txv_approved_at_text"
            tools:text="Completed" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>